mini-microservices/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: meetkumar/meet-comments
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP #if do not specify type, it will be ClusterIP by default
  selector:
    app: comments
  ports:
  - name: comments
    protocol: TCP
    port: 4001 #node port
    targetPort: 4001 #container port
