mini-microservices/infra/k8s/event_bus-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-depl
spec:
  type: NodePort
  selector:
    app: event-bus
  ports:
  - name: event-bus
    protocol: TCP
    port: 4005 #node port
    targetPort: 4005 #container port
