mini-microservices/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: meetkumar/meet-moderation
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP #if do not specify type, it will be ClusterIP by default
  selector:
    app: moderation
  ports:
  - name: moderation
    protocol: TCP
    port: 4003 #node port
    targetPort: 4003 #container port
