mini-microservices/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: meetkumar/meet-posts-latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP #if do not specify type, it will be ClusterIP by default
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000 #node port
    targetPort: 4000 #container port
