mini-microservices/infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000 #node port
    targetPort: 4000 #container port
