mini-microservices/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: meetkumar/meet-query
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP #if do not specify type, it will be ClusterIP by default
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4002 #node port
    targetPort: 4002 #container port
